--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-inner">
-            <h1>ロゴ</h1>
+            <h1>ロゴです</h1>
             <nav class="g-nav">
             <ul>
             <li><a href="#">会社概要<span>Company</span></a></li>
